force-app/main/default/objects/Product2/fields/Product_Line_ilmn__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_ilmn__c</fullName>
    <description>NOTE: API name of field is updated because of SVMX field with same API name.</description>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AmpliSeq</fullName>
            </value>
            <value>
                <fullName>AutoLoader</fullName>
            </value>
            <value>
                <fullName>Automated Library Prep</fullName>
            </value>
            <value>
                <fullName>Automation Accessories</fullName>
            </value>
            <value>
                <fullName>BaseSpace Cloud</fullName>
            </value>
            <value>
                <fullName>BaseSpace Interpretation</fullName>
            </value>
            <value>
                <fullName>BaseSpace LIMS</fullName>
            </value>
            <value>
                <fullName>BaseSpace Onsite</fullName>
            </value>
            <value>
                <fullName>BeadArray Reader</fullName>
            </value>
            <value>
                <fullName>BeadXpress System</fullName>
            </value>
            <value>
                <fullName>BioRad</fullName>
            </value>
            <value>
                <fullName>cBot</fullName>
            </value>
            <value>
                <fullName>ClearScan</fullName>
            </value>
            <value>
                <fullName>Cluster Generation GA</fullName>
            </value>
            <value>
                <fullName>Cluster Generation - HiSeq</fullName>
            </value>
            <value>
                <fullName>Cluster Generation - HiSeq HD</fullName>
            </value>
            <value>
                <fullName>Cluster Generation - HiSeq X</fullName>
            </value>
            <value>
                <fullName>Cluster Station</fullName>
            </value>
            <value>
                <fullName>CSPro Certification - MA</fullName>
            </value>
            <value>
                <fullName>Cytogenetics Products</fullName>
            </value>
            <value>
                <fullName>DASL</fullName>
            </value>
            <value>
                <fullName>DNA Library Prep</fullName>
            </value>
            <value>
                <fullName>DRAGEN</fullName>
            </value>
            <value>
                <fullName>ECO System</fullName>
            </value>
            <value>
                <fullName>Epicentre Products</fullName>
            </value>
            <value>
                <fullName>Epigenetics Library Prep</fullName>
            </value>
            <value>
                <fullName>EPI Library Prep</fullName>
            </value>
            <value>
                <fullName>Fastrack Sales Components</fullName>
            </value>
            <value>
                <fullName>FastTrack - MA</fullName>
            </value>
            <value>
                <fullName>FastTrack - SQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>