force-app/main/default/objects/Product2/fields/Product_Specific_Terms__c.field-meta.xml
<CustomField>
    <fullName>Product_Specific_Terms__c</fullName>
    <description>Field to store Product Specific Terms.</description>
    <label>Product Specific Terms</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>