force-app/main/default/objects/Product2/fields/Regulatory_Type__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Type__c</fullName>
    <description>Field to store Regulatory Type.</description>
    <label>Regulatory Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>