force-app/main/default/objects/Product2/fields/Replenishment_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Replenishment_Eligible__c</fullName>
    <description>Field to store Replenishment Eligible.</description>
    <label>Replenishment Eligible</label>
    <length>50</length>
    <type>Text</type>
</CustomField>