force-app/main/default/objects/Product2/fields/RMA_Required__c.field-meta.xml
<CustomField>
    <fullName>RMA_Required__c</fullName>
    <description>Field to check if RMA Required or not.</description>
    <defaultValue>false</defaultValue>
    <label>RMA Required</label>
    <type>Checkbox</type>
</CustomField>