force-app/main/default/objects/Product2/fields/Safety_Critical_Part__c.field-meta.xml
<CustomField>
    <fullName>Safety_Critical_Part__c</fullName>
    <description>Checkbox field to specify Safety Critical Part.</description>
    <defaultValue>false</defaultValue>
    <label>Safety Critical Part</label>
    <type>Checkbox</type>
</CustomField>