force-app/main/default/objects/Product2/fields/Sales_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Notes__c</fullName>
    <description>To store notes from Sales.</description>
    <label>Sales Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>