force-app/main/default/objects/Product2/fields/Serial_Number_Profile__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Profile__c</fullName>
    <description>To capture Serial Number of Profile
Populated from Integration</description>
    <label>Serial Number Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>