force-app/main/default/objects/Product2/fields/Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Level__c</fullName>
    <description>Field to store Service Level.</description>
    <label>Service Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>