force-app/main/default/objects/Product2/fields/Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Service_Notes__c</fullName>
    <description>Field to store Service Notes.</description>
    <label>Service Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>