force-app/main/default/objects/Product2/fields/Service_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Product_Type__c</fullName>
    <description>Field to specifytype of service product.</description>
    <label>Service Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Approved Tool</fullName>
                <isActive>false</isActive>
                <label>Approved Tool</label>
            </value>
            <value>
                <fullName>Approved Tool- Calibrated</fullName>
            </value>
            <value>
                <fullName>Approved Tool- Non-Calibrated</fullName>
            </value>
            <value>
                <fullName>Approved Tool- Reference</fullName>
            </value>
            <value>
                <fullName>Consumable</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Instrument</fullName>
            </value>
            <value>
                <fullName>NONFRU</fullName>
            </value>
            <value>
                <fullName>Spare</fullName>
            </value>
            <value>
                <fullName>Standard Tool</fullName>
            </value>
            <value>
                <fullName>Tool</fullName>
                <isActive>false</isActive>
                <label>Tool</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>