force-app/main/default/objects/Product2/fields/Service_Value__c.field-meta.xml
<CustomField>
    <fullName>Service_Value__c</fullName>
    <description>Service Value</description>
    <label>Service Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>