force-app/main/default/objects/Product2/fields/SFDC_Block__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Block__c</fullName>
    <description>Field to store SFDC block.</description>
    <label>SFDC Block</label>
    <length>255</length>
    <type>Text</type>
</CustomField>