force-app/main/default/objects/Product2/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Identify the source system that is creating the case in Salesforce</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
                <default>true</default>
                <label>SFDC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>