force-app/main/default/objects/Product2/fields/Storage__c.field-meta.xml
<CustomField>
    <fullName>Storage__c</fullName>
    <description>Number field to specify storage capacity.</description>
    <label>Storage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>