force-app/main/default/objects/Product2/fields/Storage_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Storage_Conditions__c</fullName>
    <description>Field to store Storage Conditions.</description>
    <label>Storage Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>