force-app/main/default/objects/Product2/fields/Subscription_Tier__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Tier__c</fullName>
    <description>Text field to store Subscription Tier.</description>
    <label>Subscription Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>