force-app/main/default/objects/Product2/fields/SVMXC__Product_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Product_Type__c</fullName>
    <description>Picklist values here will be matched with similar field in Custom Coverage object to find applicable coverage</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wearable</fullName>
            </value>
            <value>
                <fullName>Consumable</fullName>
            </value>
            <value>
                <fullName>Instrument</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
                <default>true</default>
                <label>Core</label>
            </value>
            <value>
                <fullName>Spare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>