force-app/main/default/objects/Product2/fields/SVMXC__Select__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Select__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select</label>
    <type>Checkbox</type>
</CustomField>