force-app/main/default/objects/Product2/fields/Temperature_Description__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Description__c</fullName>
    <description>Field to store Temperature description.</description>
    <label>Temperature Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>