force-app/main/default/objects/Product2/fields/Web_Sellable__c.field-meta.xml
<CustomField>
    <fullName>Web_Sellable__c</fullName>
    <description>Field to store Web Sellable.</description>
    <label>Web Sellable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>