force-app/main/default/objects/Product2/fields/Weight_Unit__c.field-meta.xml
<CustomField>
    <fullName>Weight_Unit__c</fullName>
    <description>Field to store Weight Unit.</description>
    <label>Weight Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>