force-app/main/default/objects/Product2/fields/Zuora_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Product_ID__c</fullName>
    <description>Unique field to store Zuora Product Id.</description>
    <externalId>true</externalId>
    <label>Zuora Product ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>