force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>Material_Group__c</columns>
    <columns>Material_Number__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.EXTERNAL_ID</columns>
    <columns>SVMX_PS_External_ID__c</columns>
    <columns>Product_Line_ilmn__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Product_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Material_Number__c</field>
        <operation>equals</operation>
        <value>20028314</value>
    </filters>
    <label>All Products</label>
</ListView>