force-app/main/default/objects/Product2/listViews/Batch_Managed_Parts_listed_as_Non_Tracke.listView-meta.xml
<ListView>
    <fullName>Batch_Managed_Parts_listed_as_Non_Tracke</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Batch_Management__c</columns>
    <columns>SVMXC__Tracking__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Batch_Management__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Batch Managed Parts listed as Non-Tracke</label>
    <sharedTo>
        <role>GIS</role>
    </sharedTo>
</ListView>