force-app/main/default/objects/Product2/listViews/Bundle_List_View.listView-meta.xml
<ListView>
    <fullName>Bundle_List_View</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Bundle_Id__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Send_To_AEM_Status__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Apttus_Config2__HasOptions__c</columns>
    <columns>Apttus_Config2__Customizable__c</columns>
    <columns>Product_Level_Indicator__c</columns>
    <columns>Bundle_Name__c</columns>
    <columns>Bundle_Channel__c</columns>
    <columns>Bundle_Segment__c</columns>
    <columns>Bundle_Description__c</columns>
    <columns>Apttus_Config2__ExpirationDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apttus_Config2__ConfigurationType__c</field>
        <operation>equals</operation>
        <value>Bundle</value>
    </filters>
    <label>Bundle List View</label>
</ListView>