force-app/main/default/objects/Product2/listViews/ICA_Products.listView-meta.xml
<ListView>
    <fullName>ICA_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Product_Group__c</columns>
    <columns>Product_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>startsWith</operation>
        <value>ICA</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ICA Storage</label>
</ListView>