force-app/main/default/objects/Product2/listViews/Product_Hierarchy_View.listView-meta.xml
<ListView>
    <fullName>Product_Hierarchy_View</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Line_Of_Business__c</columns>
    <columns>Product_Category__c</columns>
    <columns>SVMXC__Product_Line__c</columns>
    <columns>Product_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>Product Hierarchy View</label>
</ListView>